--- a/react-app/src/styles.css
+++ b/react-app/src/styles.css
@@ -1,3 +1,26 @@
 .hand {
     font-size: 75px;
 }
+
+.card, .card-red {
+    height: 150px;
+    width: 100px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-red {
+    color: red;
+  }
+  
+  .cards {
+    margin: 0 auto;
+  }
+  
+  .input-bet {
+    display: flex;
+    justify-content: center;
+  }
